--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,12 +1,115 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Source+Sans+Pro:wght@400;600;700&display=swap');
 
-body {
-  font-family: 'Source Sans Pro', sans-serif;
-  margin: 0;
-  padding: 0;
-  height: 100%;
+nav {
+  background-color: #fcc603;
 }
 
+.look-like-button {
+  background: none;
+  border: none;
+  font: inherit;
+  cursor: pointer;
+  margin: 0;
+  color: black;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+@media (max-width: 600px) {
+
+  nav {
+    padding-bottom: 1em;
+  }
+
+  h1 {
+    text-align: center;
+  }
+
+  #nav-items-container {
+    grid-area: 1 / 2 / span 1 /span 1;
+  }
+
+  #nav-icons {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .nav-icon {
+    justify-self: center;
+    width: 1em;
+  }
+
+  #nav-links {
+    display: grid;
+    grid-template: 1fr / 1fr 1fr 1fr 1fr;
+    justify-items: center;
+    margin: 0;
+    padding: 0;
+  }
+
+  li {
+    font-size: 10pt;
+  }
+
+}
+
+@media (min-width: 601px) {
+
+  nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    background-color: #fcc603;
+    padding: 1em;
+  }
+
+  h1 {
+    font-size: 2em;
+  }
+
+  #nav-items-container {
+    width: 60%;
+  }
+
+  #nav-icons {
+    display: grid; 
+    grid-template: auto / 1fr 1fr 1fr 1fr;
+    justify-content: center;
+  }
+
+  .nav-icon {
+    width: 1.5em;
+    justify-self: center;
+  }
+
+  #nav-links {
+    display: grid;
+    grid-template: auto / 1fr 1fr 1fr 1fr;
+    justify-items: center;
+    margin: 0;
+    padding: 0;
+  }
+
+  .nav-link {
+    justify-self: center;
+    margin: 0;
+    padding: 0;
+    width: 5em;
+    text-align: center;
+  }
+  
+}
+
+/*
 @media (max-width: 600px) {
 
   body {
@@ -207,3 +310,4 @@ a {
   }
 
 }
+*/
